# maestro

./: README.md  TODO.md  bun.lockb  components.json  config.yaml  index-config-editor.html  index-mixer.html  index-overlay.html  index-settings.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: discord-release-notification.yaml  release.yaml
arduino/sketch/: sketch.ino
scripts/: resize.py  update-version.js
src/: App.tsx  ConfigEditor.tsx  MixerPanel.tsx  MixerPanel.vue  Overlay.tsx  Overlay.vue  Settings.tsx  Settings.vue  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  config.yaml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  event_listeners.rs  events.rs  lib.rs  logger.rs  main.rs  process_utils.rs  serial.rs  system_tray.rs  volume_manager.rs  window_manager.rs
src-tauri/src/api/: commands.rs  event_listeners.rs  events.rs
src-tauri/src/models/: audio_session.rs
src-tauri/src/services/: com_service.rs  icon_service.rs  volume_service.rs  window_service.rs
src-tauri/src/tray/: config_editor.rs  console.rs  system_tray.rs
src-tauri/src/utils/: key.rs  key_listener.rs  keyboard.rs  logger.rs  macro_listener.rs  system_manager.rs  windows_startup.rs
src/components/: SessionButton.tsx  SessionButton.vue  SpeakerIcon.tsx  SpeakerIcon.vue  ThemePicker.tsx  ThemePicker.vue  VolumeControl.tsx  VolumeControl.vue
src/types/: audioSession.ts  config.ts  sessionData.d.ts
src/utils/: commands.ts  events.ts  logger.ts
