[package]
name = "mix-monkey"
version = "1.0.1"
description = "Windows Audio Manager"
authors = ["Zach Connelly"]
edition = "2021"

[lib]
name = "mix_monkey_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
yaml-rust = "0.4.5"
flexi_logger = "0.29.0"
log = "0.4.22"
once_cell = "1.18.0"
windows-volume-control = { git = "https://github.com/zmconnelly/windows-volume-control.git", branch = "main" }
windows-icons = "0.1.1"
serialport = "4.0"
tauri-plugin-autostart = "2.0.0-rc"
lazy_static = "1.5"
winreg = "0.52.0"
dirs = "5.0.1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }
