[package]
name = "maestro"
version = "1.1.0"
description = "Windows Audio Manager"
authors = ["z3k"]
edition = "2021"

[lib]
name = "maestro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
yaml-rust = "0.4"
flexi_logger = "0.31.4"
log = "0.4.28"
once_cell = "1.21"
windows-volume-control = { git = "https://github.com/z3k-io/windows-volume-control.git", branch = "main" }
windows-key-listener = "0.2"
windows-icons = "0.3"
dirs = "6.0"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader", 
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }
